--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "projekt-indywidualny",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.html",
+  "main": "root/index.html",
   "scripts": {
     "init-project": "npm install && npm-run-all init:*",
     "init:dirs": "mkdirp dist src/sass src/css src/vendor src/images src/js",
-    "init:files": "touch README.md src/index.html src/sass/style.scss src/js/script.js",
+    "init:files": "touch README.md root/index.html src/sass/style.scss src/js/script.js",
     "init:gitignore": "curl https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore -o .gitignore",
     "init:gitignore:custom": "echo \"dist\" >> .gitignore",
     "test": "npm-run-all test:*",
